--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -25,21 +25,9 @@
 --------------------------------------*/
 .head-img {
   .wrap {
-    position: relative;
-    height: 100%;
+    background: $soft_violet;
     width: 100%;
-  }
-  .wrap:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
     height: 100%;
-    width: 100%;
-    background: $soft_violet_overlay;
-    mix-blend-mode: multiply;
-    border-radius: 0 5px 5px 0;
-    z-index: 999;
   }
 }
 
@@ -109,6 +97,8 @@ $breakpoint: 768px;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    mix-blend-mode: multiply;
+    opacity: 0.75;
   }
   .img-mobile {
     display: none;
@@ -138,8 +128,10 @@ $breakpoint: 768px;
   --------------------------------------*/
   .img-mobile {
     display: block;
-    border-radius: 5px 5px 0 0;
     width: 100%;
+    border-radius: 5px 5px 0 0;
+    mix-blend-mode: multiply;
+    opacity: 0.75;
   }
   .img-desktop {
     display: none;
