--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -8,10 +8,22 @@
   padding-bottom: 20px;
   border-radius: 5px;
   margin: 50px 0;
+  @media (min-width: $breakpoint) {
+    display: flex;
+    flex-direction: row-reverse;
+    max-width: 1000px;
+    gap: 5%;
+    width: auto;
+    padding-bottom: 0px;
+    height: fit-content;
+  }
   h1 {
     font-size: 1.8rem;
     padding: 5px 0;
     color: $white;
+    @media (min-width: $breakpoint) {
+      font-size: 2rem;
+    }
   }
   h1 > span {
     color: $soft_violet;
@@ -24,18 +36,62 @@
 /* Card Head Image
 --------------------------------------*/
 .head-img {
+  @media (min-width: $breakpoint) {
+    font-size: 2rem;
+    flex: 1 1 100%;
+  }
   .wrap {
     background: $soft_violet;
     width: 100%;
     height: 100%;
+    border-radius: 5px 5px 0 0;
+    @media (min-width: $breakpoint) {
+      border-radius: 0 5px 5px 0;
+    }
+    .img-desktop {
+      width: 100%;
+      height: 100%;
+      mix-blend-mode: multiply;
+      opacity: 0.75;
+      object-fit: cover;
+      display: none;
+      @media (min-width: $breakpoint) {
+        display: block;
+      }
+    }
+    .img-mobile {
+      width: 100%;
+      mix-blend-mode: multiply;
+      opacity: 0.75;
+      display: block;
+      @media (min-width: $breakpoint) {
+        display: none;
+      }
+    }
   }
 }
 
-/* Card Description
+/* Card Body
 --------------------------------------*/
+.card__body {
+  flex: 0 1 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  @media (min-width: $breakpoint) {
+    padding: 30px 60px;
+  }
+  @media (max-width: 900px) {
+    padding: 0 20px;
+  }
+}
 .card__desc {
   text-align: center;
   padding: 0 15px;
+  @media (min-width: $breakpoint) {
+    text-align: left;
+    padding: 0;
+  }
   p {
     font-family: $font_family__lexend_deca;
     line-height: 1.6rem;
@@ -50,6 +106,11 @@
   text-align: center;
   ul {
     padding: 0;
+    @media (min-width: $breakpoint) {
+      display: flex;
+      justify-content: space-between;
+    }
+
     li:first-child {
       text-transform: lowercase;
       span {
@@ -71,76 +132,5 @@
         font-weight: 400;
       }
     }
-  }
-}
-
-$breakpoint: 768px;
-@media (min-width: $breakpoint) {
-  /* Card (Desktop)
-  --------------------------------------*/
-  .card {
-    width: auto;
-    padding-bottom: 0px;
-    height: fit-content;
-    h1 {
-      font-size: 2rem;
-    }
-  }
-  /* Head Image (Desktop)
-  --------------------------------------*/
-  .head-img {
-    flex: 1 1 100%;
-  }
-  .img-desktop {
-    display: block;
-    border-radius: 0 5px 5px 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    mix-blend-mode: multiply;
-    opacity: 0.75;
-  }
-  .img-mobile {
-    display: none;
-  }
-  /* Card Body (Desktop)
-  --------------------------------------*/
-  .card__body {
-    flex: 0 1 80%;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    padding: 30px 60px;
-    .card__desc {
-      text-align: left;
-      padding: 0;
-    }
-    .card__stat {
-      ul {
-        display: flex;
-        justify-content: space-between;
-      }
-    }
-  }
-}
-@media (max-width: calc(#{$breakpoint} - 1px)) {
-  /* Head Image (Mobile)
-  --------------------------------------*/
-  .img-mobile {
-    display: block;
-    width: 100%;
-    border-radius: 5px 5px 0 0;
-    mix-blend-mode: multiply;
-    opacity: 0.75;
-  }
-  .img-desktop {
-    display: none;
-  }
-}
-@media (max-width: 900px) {
-  /* Card Body (Desktop - small)
-  --------------------------------------*/
-  .card__body {
-    padding: 0 20px;
   }
 }
